--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -58,7 +58,9 @@ The following table summarizes the benefits of each:
 |---------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Batch   | <ul><li>The entire batch of jobs is scheduled together and there is no additional queuing time for each.</li><li><p>The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially.</p><p>There is usually minimal delay between jobs, which can help avoid drift.</p></li><li>If you partition your workload into multiple jobs and run them in batch mode, you can get results from individual jobs, which makes them more flexible to work with.</li></ul>|
 | Session | <ul><li> Dedicated and exclusive access to the QPU during the session active window, and no other users’ or QPU jobs can run. </li><li><p> Useful for workloads that don’t have all inputs ready at the outset.</p></li></ul>                                                                                                                                                                                                                                                                                                               |
-| Job     | <ul><li> Easiest to use when running a small experiment. </li><li><p> Might run sooner than batch mode.</p></li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+|---------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Job     | - Easiest to use when running a small experiment.                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+|         | - Might run sooner than batch mode.                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 
 <span id="best-practices"></span>
 ### Recommendations and best practices
