--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -52,14 +52,19 @@ The following video illustrates the session basic workflow, using sessions as an
 
 Utility-scale workloads can take many hours to complete, so it is important that both the classical and quantum resources are scheduled efficiently to streamline the execution. Execution modes provide flexibility in balancing the cost and time tradeoff to use resources optimally for your workloads. There are several aspects to consider when choosing which execution mode to use, such as _usage_, overall execution time (TTL), and time between jobs (ITTL).
 
-The following table summarizes the benefits of each:
+The the benefits of each are summarazed below:
 
-| Mode    | Benefits                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-|---------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Batch   | <ul><li>The entire batch of jobs is scheduled together and there is no additional queuing time for each.</li><li><p>The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially.</p><p>There is usually minimal delay between jobs, which can help avoid drift.</p></li><li>If you partition your workload into multiple jobs and run them in batch mode, you can get results from individual jobs, which makes them more flexible to work with.</li></ul>|
-| Session | <ul><li> Dedicated and exclusive access to the QPU during the session active window, and no other users’ or QPU jobs can run. </li><li><p> Useful for workloads that don’t have all inputs ready at the outset.</p></li></ul>                                                                                                                                                                                                                                                                                                               |
-| Job     | - Easiest to use when running a small experiment.                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-|         | - Might run sooner than batch mode.                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+- **Batch**
+   - The entire batch of jobs is scheduled together and there is no additional queuing time for each.
+   - The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially.
+   - There is usually minimal delay between jobs, which can help avoid drift.
+   - If you partition your workload into multiple jobs and run them in batch mode, you can get results from individual jobs, which makes them more flexible to work with.
+- **Session**
+   - Dedicated and exclusive access to the QPU during the session active window, and no other users’ or QPU jobs can run.
+   - Useful for workloads that don’t have all inputs ready at the outset.
+- **Job**
+   - Easiest to use when running a small experiment.
+   - Might run sooner than batch mode.
 
 <span id="best-practices"></span>
 ### Recommendations and best practices
