--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -7,7 +7,7 @@ description: How to run quantum computing jobs in batch mode using Qiskit Runtim
 # Run jobs in a batch
 
 
-Batch mode can shorten processing time if all jobs can be provided at the outset. If you want to submit iterative jobs, use [sessions](guides/execution-modes) instead.  Using batch mode has these benefits:
+Batch mode can shorten processing time if all jobs can be provided at the outset. If you want to submit iterative jobs, use [sessions](/guides/execution-modes) instead.  Using batch mode has these benefits:
 
 -  The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially.
 -  There is usually minimal delay between jobs, which can help avoid drift.
