--- a/docs/api/qiskit-ibm-runtime/0.14/runtime-program.mdx
+++ b/docs/api/qiskit-ibm-runtime/0.14/runtime-program.mdx
@@ -13,7 +13,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeProgram
 
   This class contains the metadata describing a program, such as its name, ID, description, etc.
 
-  You can use the [`QiskitRuntimeService`](qiskit_ibm_runtime.QiskitRuntimeService "qiskit_ibm_runtime.QiskitRuntimeService") to retrieve the metadata of a specific program or all programs. For example:
+  You can use the [`QiskitRuntimeService`](qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") to retrieve the metadata of a specific program or all programs. For example:
 
   ```python
   from qiskit_ibm_runtime import QiskitRuntimeService
@@ -215,13 +215,13 @@ python_api_name: qiskit_ibm_runtime.RuntimeProgram
   <Function id="qiskit_ibm_runtime.RuntimeProgram.parameters" signature="parameters()">
     Program parameter namespace.
 
-    You can use the returned namespace to assign parameter values and pass the namespace to [`qiskit_ibm_runtime.QiskitRuntimeService.run()`](qiskit_ibm_runtime.QiskitRuntimeService#run "qiskit_ibm_runtime.QiskitRuntimeService.run"). The namespace allows you to use auto-completion to find program parameters.
+    You can use the returned namespace to assign parameter values and pass the namespace to [`qiskit_ibm_runtime.QiskitRuntimeService.run()`](qiskit-runtime-service#run "qiskit_ibm_runtime.QiskitRuntimeService.run"). The namespace allows you to use auto-completion to find program parameters.
 
     Note that each call to this method returns a new namespace instance and does not include any modification to the previous instance.
 
     **Return type**
 
-    [`ParameterNamespace`](qiskit_ibm_runtime.ParameterNamespace "qiskit_ibm_runtime.runtime_program.ParameterNamespace")
+    [`ParameterNamespace`](parameter-namespace "qiskit_ibm_runtime.runtime_program.ParameterNamespace")
 
     **Returns**
 
